@@ -1,4 +1,6 @@
 /*
+ * Copyright (c) 2022-2026 Instituto Tecnológico de Informática (ITI)
+ *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/.
@@ -6,24 +8,24 @@
 package es.iti.wakamiti.azure.internal;
 
 
+import static es.iti.wakamiti.azure.api.model.TestSuite.SLASH_CODE;
+import static org.assertj.core.api.Assertions.assertThat;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.file.Path;
+import java.util.List;
+
+import org.junit.BeforeClass;
+import org.junit.Test;
+import org.slf4j.Logger;
+
 import es.iti.wakamiti.api.WakamitiException;
 import es.iti.wakamiti.api.plan.PlanNodeSnapshot;
 import es.iti.wakamiti.api.util.WakamitiLogger;
 import es.iti.wakamiti.azure.AzureSynchronizer;
 import es.iti.wakamiti.azure.api.model.TestCase;
 import es.iti.wakamiti.core.JsonPlanSerializer;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.slf4j.Logger;
-
-import java.io.IOException;
-import java.io.InputStream;
-import java.nio.file.Path;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import static es.iti.wakamiti.azure.api.model.TestSuite.SLASH_CODE;
-import static org.assertj.core.api.Assertions.assertThat;
 
 
 public class MapperTest {
@@ -39,14 +41,16 @@ public class MapperTest {
         planSuite = new JsonPlanSerializer().read(resource("wakamiti_suite.json"));
     }
 
-    private static InputStream resource(String resource) {
+    private static InputStream resource(
+            String resource
+    ) {
         return Thread.currentThread().getContextClassLoader().getResourceAsStream(resource);
     }
 
     @Test
     public void testMapTestsWhenFeatureWithSuccess() {
         List<TestCase> tests = Mapper.ofType(AzureSynchronizer.GHERKIN_TYPE_FEATURE).instance(null)
-                .mapTests(plan).collect(Collectors.toList());
+                .mapTests(plan).toList();
         logResult(tests);
 
         assertThat(tests)
@@ -60,7 +64,7 @@ public class MapperTest {
     @Test
     public void testMapTestsWhenFeatureAndSourceBasedWithSuccess() {
         List<TestCase> tests = Mapper.ofType(AzureSynchronizer.GHERKIN_TYPE_FEATURE).instance("features")
-                .mapTests(plan).collect(Collectors.toList());
+                .mapTests(plan).toList();
         logResult(tests);
 
         assertThat(tests)
@@ -84,14 +88,14 @@ public class MapperTest {
     @Test
     public void testMapTestsWhenFeatureAndSourceBasedAndAzureSuite() {
         List<TestCase> tests = Mapper.ofType(AzureSynchronizer.GHERKIN_TYPE_FEATURE).instance("features")
-                .mapTests(planSuite).collect(Collectors.toList());
+                .mapTests(planSuite).toList();
         logResult(tests);
 
         assertThat(tests)
                 .isNotNull()
                 .isNotEmpty()
                 .hasSize(1)
-                .allMatch(tc -> tc.suite().asPath().equals(Path.of("api"+SLASH_CODE+"suite/azure"))
+                .allMatch(tc -> tc.suite().asPath().equals(Path.of("api" + SLASH_CODE + "suite/azure"))
                         && tc.suite().name().equals("azure")
                         && tc.suite().parent().name().equals("api/suite")
                 )
@@ -101,7 +105,7 @@ public class MapperTest {
     @Test
     public void testMapTestsWhenScenario() {
         List<TestCase> tests = Mapper.ofType(AzureSynchronizer.GHERKIN_TYPE_SCENARIO).instance(null)
-                .mapTests(plan).collect(Collectors.toList());
+                .mapTests(plan).toList();
         logResult(tests);
 
         assertThat(tests)
@@ -120,7 +124,7 @@ public class MapperTest {
     @Test
     public void testMapTestsWhenScenarioAndSourceBased() {
         List<TestCase> tests = Mapper.ofType(AzureSynchronizer.GHERKIN_TYPE_SCENARIO).instance("features")
-                .mapTests(plan).collect(Collectors.toList());
+                .mapTests(plan).toList();
         logResult(tests);
 
         assertThat(tests)
@@ -149,14 +153,14 @@ public class MapperTest {
     @Test
     public void testMapTestsWhenScenarioAndSourceBasedAndAzureSuite() {
         List<TestCase> tests = Mapper.ofType(AzureSynchronizer.GHERKIN_TYPE_SCENARIO).instance("features")
-                .mapTests(planSuite).collect(Collectors.toList());
+                .mapTests(planSuite).toList();
         logResult(tests);
 
         assertThat(tests)
                 .isNotNull()
                 .isNotEmpty()
                 .hasSize(3)
-                .allMatch(tc -> tc.suite().asPath().equals(Path.of("api"+SLASH_CODE+"suite/azure"))
+                .allMatch(tc -> tc.suite().asPath().equals(Path.of("api" + SLASH_CODE + "suite/azure"))
                         && tc.suite().name().equals("azure")
                         && tc.suite().parent().name().equals("api/suite")
                 );
@@ -168,7 +172,10 @@ public class MapperTest {
         assertThat(tests.get(2)).hasFieldOrPropertyWithValue("order", 2);
     }
 
-    private void logResult(Object o) {
+    private void logResult(
+            Object o
+    ) {
         LOGGER.debug("Result: {}", o);
     }
+
 }
