@@ -1,4 +1,22 @@
+/*
+ * Copyright (c) 2022-2026 Instituto Tecnológico de Informática (ITI)
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
+ */
 package es.iti.wakamiti.xray.test;
+
+
+import static org.assertj.core.api.Assertions.assertThat;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.List;
+
+import org.junit.BeforeClass;
+import org.junit.Test;
+import org.slf4j.Logger;
 
 import es.iti.wakamiti.api.plan.PlanNodeSnapshot;
 import es.iti.wakamiti.api.util.WakamitiLogger;
@@ -6,16 +24,6 @@ import es.iti.wakamiti.core.JsonPlanSerializer;
 import es.iti.wakamiti.xray.XRaySynchronizer;
 import es.iti.wakamiti.xray.internal.Mapper;
 import es.iti.wakamiti.xray.model.TestCase;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.slf4j.Logger;
-
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import static org.assertj.core.api.Assertions.assertThat;
 
 
 public class MapperTest {
@@ -29,14 +37,16 @@ public class MapperTest {
         plan = new JsonPlanSerializer().read(resource("wakamiti.json"));
     }
 
-    private static InputStream resource(String resource) {
+    private static InputStream resource(
+            String resource
+    ) {
         return Thread.currentThread().getContextClassLoader().getResourceAsStream(resource);
     }
 
     @Test
     public void testMapTestsWhenFeatureWithSuccess() {
         List<TestCase> tests = Mapper.ofType(XRaySynchronizer.GHERKIN_TYPE_FEATURE).instance(null)
-                .map(plan).collect(Collectors.toList());
+                .map(plan).toList();
 
         assertThat(tests)
                 .isNotNull()
@@ -49,7 +59,7 @@ public class MapperTest {
     @Test
     public void testMapTestsWhenFeatureAndSourceBasedWithSuccess() {
         List<TestCase> tests = Mapper.ofType(XRaySynchronizer.GHERKIN_TYPE_FEATURE).instance("features")
-                .map(plan).collect(Collectors.toList());
+                .map(plan).toList();
 
         assertThat(tests)
                 .isNotNull()
@@ -59,11 +69,10 @@ public class MapperTest {
                 .allMatch(tc -> tc.getJira().getSummary().equals("XRay integration feature"));
     }
 
-
     @Test
     public void testMapTestsWhenScenario() {
         List<TestCase> tests = Mapper.ofType(XRaySynchronizer.GHERKIN_TYPE_SCENARIO).instance(null)
-                .map(plan).collect(Collectors.toList());
+                .map(plan).toList();
 
         assertThat(tests.get(0)).hasFieldOrProperty("jira.summary");
         assertThat(tests.get(1)).hasFieldOrProperty("jira.summary");
@@ -73,7 +82,7 @@ public class MapperTest {
     @Test
     public void testMapTestsWhenScenarioAndSourceBased() {
         List<TestCase> tests = Mapper.ofType(XRaySynchronizer.GHERKIN_TYPE_SCENARIO).instance("features")
-                .map(plan).collect(Collectors.toList());
+                .map(plan).toList();
 
         assertThat(tests.get(0)).hasFieldOrProperty("jira.summary");
         assertThat(tests.get(1)).hasFieldOrProperty("jira.summary");
