@@ -1,4 +1,6 @@
 /*
+ * Copyright (c) 2022-2026 Instituto Tecnológico de Informática (ITI)
+ *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/.
@@ -6,15 +8,59 @@
 package es.iti.wakamiti.core;
 
 
+import static es.iti.wakamiti.api.WakamitiConfiguration.DEFAULT_CONF_FILE;
+import static es.iti.wakamiti.api.WakamitiConfiguration.DRY_RUN;
+import static es.iti.wakamiti.api.WakamitiConfiguration.ID_TAG_PATTERN;
+import static es.iti.wakamiti.api.WakamitiConfiguration.OUTPUT_FILE_PATH;
+import static es.iti.wakamiti.api.WakamitiConfiguration.OUTPUT_FILE_PER_TEST_CASE_PATH;
+import static es.iti.wakamiti.api.WakamitiConfiguration.PREFIX;
+import static es.iti.wakamiti.api.WakamitiConfiguration.REPORT_SOURCE;
+import static es.iti.wakamiti.api.WakamitiConfiguration.RESOURCE_PATH;
+import static es.iti.wakamiti.api.WakamitiConfiguration.RESOURCE_TYPES;
+import static es.iti.wakamiti.api.WakamitiConfiguration.STRICT_TEST_CASE_ID;
+import static es.iti.wakamiti.api.WakamitiConfiguration.WORKING_DIR;
+import static es.iti.wakamiti.core.gherkin.GherkinPlanBuilder.GHERKIN_TYPE_FEATURE;
+
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.Writer;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Function;
+import java.util.stream.Stream;
+
+import org.slf4j.Logger;
+
 import es.iti.commons.jext.ExtensionManager;
-import es.iti.wakamiti.api.*;
+import es.iti.wakamiti.api.BackendFactory;
+import es.iti.wakamiti.api.Hinter;
+import es.iti.wakamiti.api.Resource;
+import es.iti.wakamiti.api.WakamitiConfiguration;
+import es.iti.wakamiti.api.WakamitiContributors;
+import es.iti.wakamiti.api.WakamitiException;
 import es.iti.wakamiti.api.event.Event;
 import es.iti.wakamiti.api.event.EventDispatcher;
 import es.iti.wakamiti.api.extensions.EventObserver;
 import es.iti.wakamiti.api.extensions.PlanTransformer;
 import es.iti.wakamiti.api.extensions.Reporter;
 import es.iti.wakamiti.api.extensions.ResourceType;
-import es.iti.wakamiti.api.plan.*;
+import es.iti.wakamiti.api.imconfig.Configuration;
+import es.iti.wakamiti.api.plan.NodeType;
+import es.iti.wakamiti.api.plan.PlanNode;
+import es.iti.wakamiti.api.plan.PlanNodeBuilder;
+import es.iti.wakamiti.api.plan.PlanNodeSnapshot;
+import es.iti.wakamiti.api.plan.PlanSerializer;
 import es.iti.wakamiti.api.util.PathUtil;
 import es.iti.wakamiti.api.util.ResourceLoader;
 import es.iti.wakamiti.api.util.ThrowableFunction;
@@ -22,22 +68,6 @@ import es.iti.wakamiti.api.util.WakamitiLogger;
 import es.iti.wakamiti.core.backend.DefaultBackendFactory;
 import es.iti.wakamiti.core.runner.PlanRunner;
 import es.iti.wakamiti.core.util.TagFilter;
-import es.iti.wakamiti.api.imconfig.Configuration;
-import org.slf4j.Logger;
-
-import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.*;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static es.iti.wakamiti.api.WakamitiConfiguration.*;
-import static es.iti.wakamiti.core.gherkin.GherkinPlanBuilder.GHERKIN_TYPE_FEATURE;
 
 
 /**
@@ -45,30 +75,28 @@ import static es.iti.wakamiti.core.gherkin.GherkinPlanBuilder.GHERKIN_TYPE_FEATU
  * It serves as a central hub for configuration, plan creation,
  * execution, and report generation.
  * This class uses contributors and extensions for extensibility.
- *
- * @author Luis Iñesta Gelabert - linesta@iti.es
  */
-public class Wakamiti {
+public final class Wakamiti {
 
+    /** Root logger used for engine lifecycle, discovery and execution diagnostics. */
     public static final Logger LOGGER = WakamitiLogger.forClass(Wakamiti.class);
-    private static final AtomicBoolean instantiated = new AtomicBoolean();
-    private static final ResourceLoader resourceLoader = new ResourceLoader();
-    private static final WakamitiContributors contributors = new WakamitiContributors();
-    private static final PlanSerializer planSerializer = new JsonPlanSerializer();
-    private static final EventDispatcher eventDispatcher = new EventDispatcher();
-    private static final WakamitiFetcher artifactFetcher = new WakamitiFetcher();
+    private static final AtomicBoolean INSTANTIATED = new AtomicBoolean();
+    private static final ResourceLoader RESOURCE_LOADER = new ResourceLoader();
+    private static final WakamitiContributors CONTRIBUTORS = new WakamitiContributors();
+    private static final PlanSerializer PLAN_SERIALIZER = new JsonPlanSerializer();
+    private static final EventDispatcher EVENT_DISPATCHER = new EventDispatcher();
+    private static final WakamitiFetcher ARTIFACT_FETCHER = new WakamitiFetcher();
 
     private static final String IMPORTANT = "{important}";
 
     private static Wakamiti instance;
-
 
     private Wakamiti() {
         WakamitiLogger.configure(WakamitiConfiguration.DEFAULTS);
         if (LOGGER.isInfoEnabled()) {
             LOGGER.info("{logo}", WakamitiLogger.logo());
         }
-        contributors.eventObservers().forEach(eventDispatcher::addObserver);
+        CONTRIBUTORS.eventObservers().forEach(EVENT_DISPATCHER::addObserver);
     }
 
     /**
@@ -77,7 +105,7 @@ public class Wakamiti {
      * @return The Wakamiti instance.
      */
     public static Wakamiti instance() {
-        if (!instantiated.getAndSet(true)) {
+        if (!INSTANTIATED.getAndSet(true)) {
             instance = new Wakamiti();
         }
         return instance;
@@ -89,7 +117,7 @@ public class Wakamiti {
      * @return The ResourceLoader instance.
      */
     public static ResourceLoader resourceLoader() {
-        return resourceLoader;
+        return RESOURCE_LOADER;
     }
 
     /**
@@ -98,7 +126,7 @@ public class Wakamiti {
      * @return The WakamitiContributors instance.
      */
     public static WakamitiContributors contributors() {
-        return contributors;
+        return CONTRIBUTORS;
     }
 
     /**
@@ -107,7 +135,7 @@ public class Wakamiti {
      * @return The plan serializer.
      */
     public static PlanSerializer planSerializer() {
-        return planSerializer;
+        return PLAN_SERIALIZER;
     }
 
     /**
@@ -116,7 +144,7 @@ public class Wakamiti {
      * @return The extension manager.
      */
     public static ExtensionManager extensionManager() {
-        return contributors.extensionManager();
+        return CONTRIBUTORS.extensionManager();
     }
 
     /**
@@ -125,7 +153,7 @@ public class Wakamiti {
      * @return The artifact fetcher.
      */
     public static WakamitiFetcher artifactFetcher() {
-        return artifactFetcher;
+        return ARTIFACT_FETCHER;
     }
 
     /**
@@ -144,7 +172,9 @@ public class Wakamiti {
      * @param configuration The configuration for which the working directory is obtained.
      * @return The working directory path.
      */
-    public static Path workingDir(Configuration configuration) {
+    public static Path workingDir(
+            Configuration configuration
+    ) {
         return Path.of(configuration.get(WORKING_DIR, String.class).orElse("")).toAbsolutePath();
     }
 
@@ -153,7 +183,9 @@ public class Wakamiti {
      *
      * @param configuration The configuration to use for logger configuration.
      */
-    public void configureLogger(Configuration configuration) {
+    public void configureLogger(
+            Configuration configuration
+    ) {
         WakamitiLogger.configure(configuration);
     }
 
@@ -164,11 +196,12 @@ public class Wakamiti {
      * @param configuration The configuration for creating the test plan.
      * @return A new test plan ready to be executed.
      */
-    public PlanNode createPlanFromConfiguration(Configuration configuration) {
-
+    public PlanNode createPlanFromConfiguration(
+            Configuration configuration
+    ) {
         LOGGER.info(IMPORTANT, "Creating the Test Plan...");
 
-        resourceLoader.setWorkingDir(workingDir(configuration));
+        RESOURCE_LOADER.setWorkingDir(workingDir(configuration));
 
         List<String> discoveryPaths = configuration.getList(RESOURCE_PATH, String.class);
         if (discoveryPaths.isEmpty()) {
@@ -184,7 +217,7 @@ public class Wakamiti {
         }
         List<PlanNode> plans = new ArrayList<>();
         for (String resourceTypeName : resourceTypeNames) {
-            LOGGER.debug("Creating plan for resource type {resourceType}..., resourceTypeName");
+            LOGGER.debug("Creating plan for resource type {resourceType}...", resourceTypeName);
             Optional<PlanNode> plan = createPlanForResourceType(
                     resourceTypeName,
                     discoveryPaths,
@@ -196,7 +229,6 @@ public class Wakamiti {
             throw new WakamitiException("No test plans created");
         }
         PlanNode plan = mergePlans(plans);
-
 
         if (configuration.get(STRICT_TEST_CASE_ID, Boolean.class).orElse(Boolean.FALSE)) {
             validateUniqueTestCaseID(plan, configuration);
@@ -212,9 +244,10 @@ public class Wakamiti {
      * @param configuration The configuration for creating the test plan.
      * @return A new test plan ready to be executed.
      */
-    public PlanNode createPlanFromWorkspace(Configuration configuration) {
-
-        resourceLoader.setWorkingDir(workingDir(configuration));
+    public PlanNode createPlanFromWorkspace(
+            Configuration configuration
+    ) {
+        RESOURCE_LOADER.setWorkingDir(workingDir(configuration));
 
         List<String> discoveryPaths = configuration.getList(RESOURCE_PATH, String.class);
         if (discoveryPaths.isEmpty()) {
@@ -242,11 +275,15 @@ public class Wakamiti {
      * but using the given content instead of discovering resources
      *
      * @param configuration The configuration for creating the test plan.
+     * @param inputStream   The parameter value
      * @return A new test plan ready to be executed.
      */
-    public PlanNode createPlanFromContent(Configuration configuration, InputStream inputStream) {
+    public PlanNode createPlanFromContent(
+            Configuration configuration,
+            InputStream inputStream
+    ) {
         LOGGER.info(IMPORTANT, "Creating the Test Plan...");
-        resourceLoader.setWorkingDir(workingDir(configuration));
+        RESOURCE_LOADER.setWorkingDir(workingDir(configuration));
         String resourceTypeName = configuration.get(RESOURCE_TYPES, String.class)
                 .orElseThrow(() -> new WakamitiException("No resource types configured\nConfiguration was:\n{}", configuration));
         Optional<PlanNode> plan = createPlanForResourceType(
@@ -265,7 +302,7 @@ public class Wakamiti {
     private Stream<? extends Class<?>> loadClasses(
             List<String> discoveryPaths
     ) {
-        return contributors.allLoaderContributors()
+        return CONTRIBUTORS.allLoaderContributors()
                 .flatMap(c -> c.load(discoveryPaths));
     }
 
@@ -281,7 +318,6 @@ public class Wakamiti {
         );
     }
 
-
     private Optional<PlanNode> createPlanForResourceType(
             String resourceTypeName,
             InputStream inputStream,
@@ -294,13 +330,12 @@ public class Wakamiti {
         );
     }
 
-
     private Optional<PlanNode> createPlanForResourceType(
             String resourceTypeName,
             Function<ResourceType<?>, List<Resource<?>>> resourceSupplier,
             Configuration configuration
     ) {
-        var resourceType = contributors.resourceTypeByName(resourceTypeName);
+        var resourceType = CONTRIBUTORS.resourceTypeByName(resourceTypeName);
         if (!resourceType.isPresent()) {
             LOGGER.warn(
                     "Resource type {resourceType} is not provided by any contributor",
@@ -321,7 +356,7 @@ public class Wakamiti {
             return Optional.empty();
         }
 
-        var planBuilder = contributors.createPlanBuilderFor(resourceType.get(), configuration);
+        var planBuilder = CONTRIBUTORS.createPlanBuilderFor(resourceType.get(), configuration);
         if (planBuilder.isEmpty()) {
             LOGGER.warn(
                     "No plan builder suitable for resource type {resourceType} has been found",
@@ -332,8 +367,8 @@ public class Wakamiti {
 
         PlanNodeBuilder planNodeBuilder = planBuilder.get().createPlan(resources);
 
-        List<PlanTransformer> planTransformers = contributors.planTransformers()
-                .collect(Collectors.toList());
+        List<PlanTransformer> planTransformers = CONTRIBUTORS.planTransformers()
+                .toList();
         for (var planTransformer : planTransformers) {
             planNodeBuilder = planTransformer.transform(planNodeBuilder, configuration);
         }
@@ -341,8 +376,9 @@ public class Wakamiti {
         return Optional.ofNullable(planNodeBuilder.build());
     }
 
-
-    private PlanNode mergePlans(List<PlanNode> plans) {
+    private PlanNode mergePlans(
+            List<PlanNode> plans
+    ) {
         if (plans.isEmpty()) {
             return null;
         }
@@ -358,7 +394,9 @@ public class Wakamiti {
      * @param tagExpression The tag expression used for filtering.
      * @return A new {@link TagFilter} instance.
      */
-    public TagFilter createTagFilter(String tagExpression) {
+    public TagFilter createTagFilter(
+            String tagExpression
+    ) {
         return new TagFilter(tagExpression);
     }
 
@@ -368,7 +406,7 @@ public class Wakamiti {
      * @return The event dispatcher instance.
      */
     public EventDispatcher getEventDispatcher() {
-        return eventDispatcher;
+        return EVENT_DISPATCHER;
     }
 
     /**
@@ -376,9 +414,11 @@ public class Wakamiti {
      *
      * @param configuration The configuration used for configuring event observers.
      */
-    public void configureEventObservers(Configuration configuration) {
+    public void configureEventObservers(
+            Configuration configuration
+    ) {
         getEventDispatcher().observers()
-                .forEach(observer -> contributors.configure(observer, configuration));
+                .forEach(observer -> CONTRIBUTORS.configure(observer, configuration));
     }
 
     /**
@@ -386,7 +426,9 @@ public class Wakamiti {
      *
      * @param observer The event observer to be added.
      */
-    public void addEventDispatcherObserver(EventObserver observer) {
+    public void addEventDispatcherObserver(
+            EventObserver observer
+    ) {
         getEventDispatcher().addObserver(observer);
     }
 
@@ -395,7 +437,9 @@ public class Wakamiti {
      *
      * @param observer The event observer to be removed.
      */
-    public void removeEventDispatcherObserver(EventObserver observer) {
+    public void removeEventDispatcherObserver(
+            EventObserver observer
+    ) {
         getEventDispatcher().removeObserver(observer);
     }
 
@@ -405,7 +449,10 @@ public class Wakamiti {
      * @param eventType The type of the event.
      * @param data      The data associated with the event.
      */
-    public void publishEvent(String eventType, Object data) {
+    public void publishEvent(
+            String eventType,
+            Object data
+    ) {
         getEventDispatcher().publishEvent(eventType, data);
     }
 
@@ -416,7 +463,10 @@ public class Wakamiti {
      * @param configuration The configuration for plan execution.
      * @return The result of the test plan execution.
      */
-    public PlanNode executePlan(PlanNode plan, Configuration configuration) {
+    public PlanNode executePlan(
+            PlanNode plan,
+            Configuration configuration
+    ) {
         PlanRunner runner = new PlanRunner(plan, configuration);
         PlanNode result = configuration.get(DRY_RUN, Boolean.class).orElse(false)
                 ? runner.noRun() : runner.run();
@@ -433,20 +483,31 @@ public class Wakamiti {
      * @return A new {@link BackendFactory} instance.
      */
     public BackendFactory newBackendFactory() {
-        return new DefaultBackendFactory(contributors);
+        return new DefaultBackendFactory(CONTRIBUTORS);
     }
 
     /**
-     * Writes the output file for the specified plan and configuration.
+     * Writes execution output files for the given plan according to the
+     * provided configuration.
+     * <p>
+     * Before writing any file, this method resolves hidden properties in the
+     * provided {@code plan}. This is a side effect over the received plan
+     * instance and therefore affects subsequent consumers of the same plan
+     * object.
+     * </p>
      *
-     * @param plan          The plan for which the output file is generated.
-     * @param configuration The configuration used for writing the output file.
-     * @return The path of the written output file or {@code null} if generation is disabled.
+     * @param plan          plan to serialize into output files
+     * @param configuration effective output-related configuration
+     * @return path of the standard output file, or {@code null} when output
+     *         generation is disabled or an I/O error occurs
      */
-    public Path writeOutputFile(PlanNode plan, Configuration configuration) {
+    public Path writeOutputFile(
+            PlanNode plan,
+            Configuration configuration
+    ) {
         List<String> toHide = configuration.getList(WakamitiConfiguration.PROPERTIES_HIDDEN, String.class)
                 .stream().map(p -> "\\$\\{" + p.trim() + "(\\.[\\w\\d-]+)*\\}")
-                .collect(Collectors.toList());
+                .toList();
         plan.resolveProperties(e -> toHide.stream().noneMatch(h -> e.getKey().trim().matches(h)));
 
         if (!configuration
@@ -456,7 +517,6 @@ public class Wakamiti {
         }
 
         try {
-
             publishEvent(Event.BEFORE_WRITE_OUTPUT_FILES, null);
 
             Path standardOutputFile = writeStandardOutputFile(plan, configuration);
@@ -468,7 +528,6 @@ public class Wakamiti {
             publishEvent(Event.AFTER_WRITE_OUTPUT_FILES, null);
 
             return standardOutputFile;
-
         } catch (IOException e) {
             LOGGER.error(
                     "Error writing output file : {}",
@@ -477,12 +536,14 @@ public class Wakamiti {
             );
             return null;
         }
-
     }
 
-    private Path writeStandardOutputFile(PlanNode plan, Configuration configuration) throws IOException {
+    private Path writeStandardOutputFile(
+            PlanNode plan,
+            Configuration configuration
+    ) throws IOException {
         String outputPath = configuration.get(WakamitiConfiguration.OUTPUT_FILE_PATH, String.class).orElseThrow();
-        Path path = resourceLoader.absolutePath(
+        Path path = RESOURCE_LOADER.absolutePath(
                 PathUtil.replacePlaceholders(Paths.get(outputPath), plan)
         );
         Path parentPath = path.getParent();
@@ -498,9 +559,12 @@ public class Wakamiti {
         return path;
     }
 
-    private void writeOutputFilesPerTestCase(PlanNode plan, Configuration configuration) throws IOException {
+    private void writeOutputFilesPerTestCase(
+            PlanNode plan,
+            Configuration configuration
+    ) throws IOException {
         String outputPath = configuration.get(OUTPUT_FILE_PER_TEST_CASE_PATH, String.class).orElseThrow();
-        Path path = resourceLoader.absolutePath(
+        Path path = RESOURCE_LOADER.absolutePath(
                 PathUtil.replacePlaceholders(Paths.get(outputPath), plan)
         );
         Files.createDirectories(path);
@@ -508,7 +572,7 @@ public class Wakamiti {
         List<PlanNode> testCases = plan
                 .descendants()
                 .filter(node -> node.nodeType() == NodeType.TEST_CASE)
-                .collect(Collectors.toList());
+                .toList();
 
         for (PlanNode testCase : testCases) {
             String testCaseId = Objects.requireNonNull(testCase.id(), "test case have no id");
@@ -526,7 +590,9 @@ public class Wakamiti {
      *
      * @param configuration The configuration for report generation.
      */
-    public void generateReports(Configuration configuration) {
+    public void generateReports(
+            Configuration configuration
+    ) {
         String reportSource = configuration.get(REPORT_SOURCE, String.class)
                 .orElse(configuration.get(OUTPUT_FILE_PATH, String.class).orElse(null));
         if (reportSource == null) {
@@ -535,7 +601,7 @@ public class Wakamiti {
                     REPORT_SOURCE
             );
         }
-        generateReports(configuration, resourceLoader.absolutePath(Path.of(reportSource)));
+        generateReports(configuration, RESOURCE_LOADER.absolutePath(Path.of(reportSource)));
     }
 
     /**
@@ -545,8 +611,11 @@ public class Wakamiti {
      * @param reportSource  The path to the report source file/folder.
      * @throws WakamitiException If the report source file/folder does not exist.
      */
-    public void generateReports(Configuration configuration, Path reportSource) {
-        List<Reporter> reporters = contributors.reporters().collect(Collectors.toList());
+    public void generateReports(
+            Configuration configuration,
+            Path reportSource
+    ) {
+        List<Reporter> reporters = CONTRIBUTORS.reporters().toList();
         if (reporters.isEmpty()) {
             return;
         }
@@ -572,7 +641,6 @@ public class Wakamiti {
             throw new WakamitiException("Error searching source file/folder", e1);
         }
         generateReports(configuration, plans);
-
     }
 
     /**
@@ -581,7 +649,10 @@ public class Wakamiti {
      * @param configuration The configuration for generating reports.
      * @param plan          The plan node snapshot for generating reports.
      */
-    public void generateReports(Configuration configuration, PlanNodeSnapshot plan) {
+    public void generateReports(
+            Configuration configuration,
+            PlanNodeSnapshot plan
+    ) {
         generateReports(configuration, new PlanNodeSnapshot[]{plan});
     }
 
@@ -591,8 +662,11 @@ public class Wakamiti {
      * @param configuration The configuration for report generation.
      * @param plans         The plans for which reports are generated.
      */
-    public void generateReports(Configuration configuration, PlanNodeSnapshot[] plans) {
-        List<Reporter> reporters = contributors.reporters().collect(Collectors.toList());
+    public void generateReports(
+            Configuration configuration,
+            PlanNodeSnapshot[] plans
+    ) {
+        List<Reporter> reporters = CONTRIBUTORS.reporters().toList();
         if (reporters.isEmpty()) {
             return;
         }
@@ -607,7 +681,7 @@ public class Wakamiti {
                             reporter.info()
                     );
                 }
-                contributors.configure(reporter, configuration).report(rootNode);
+                CONTRIBUTORS.configure(reporter, configuration).report(rootNode);
             } catch (Exception e) {
                 LOGGER.error(
                         "{error} {contributor} : {error}",
@@ -619,7 +693,6 @@ public class Wakamiti {
             }
         }
         publishEvent(Event.AFTER_WRITE_OUTPUT_FILES, null);
-
     }
 
     /**
@@ -628,13 +701,17 @@ public class Wakamiti {
      * @param configuration The configuration for Hinter creation.
      * @return A Hinter instance.
      */
-    public Hinter createHinterFor(Configuration configuration) {
+    public Hinter createHinterFor(
+            Configuration configuration
+    ) {
         var backendFactory = newBackendFactory();
         return backendFactory.createHinter(configuration);
     }
 
-
-    private void validateUniqueTestCaseID(PlanNode plan, Configuration configuration) {
+    private void validateUniqueTestCaseID(
+            PlanNode plan,
+            Configuration configuration
+    ) {
         if (plan == null) {
             return;
         }
